Better command line parsing, allow keys as param

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,6 +32,8 @@
                 "127.0.0.1",
                 "-p",
                 "5050",
+                "-k",
+                "21887als2141rwq294938jwkj3029rqsnj",
                 "ls",
                 "-al"
             ]
